--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -31,6 +31,7 @@
   a {
     padding: 0.5rem 0;
     display: block;
+    color: #f78948;
   }
 }
 .social {
